--- a/public/cams.html
+++ b/public/cams.html
@@ -4,54 +4,17 @@
 <meta charset="UTF-8">
 <title>Камеры ПК</title>
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        background-color: #1e1e1e;
-        color: #eee;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 20px;
-    }
-    h1 {
-        margin-bottom: 20px;
-        color: #00d8ff;
-    }
-    #pcSelect {
-        padding: 8px 12px;
-        font-size: 16px;
-        border-radius: 5px;
-        border: none;
-        margin-bottom: 20px;
-        background-color: #333;
-        color: #eee;
-    }
-    #camContainer {
-        position: relative;
-        width: 640px;
-        height: 480px;
-        border: 2px solid #00d8ff;
-        border-radius: 8px;
-        overflow: hidden;
-        background-color: #000;
-    }
-    #camView {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-        display: block;
-    }
-    #status {
-        margin-top: 10px;
-        font-size: 14px;
-        color: #aaa;
-    }
+    body { font-family: Arial; background:#1e1e1e; color:#eee; display:flex; flex-direction:column; align-items:center; padding:20px; }
+    h1 { margin-bottom:20px; color:#00d8ff; }
+    #pcSelect { padding:8px 12px; font-size:16px; border-radius:5px; border:none; margin-bottom:20px; background:#333; color:#eee; }
+    #camContainer { position:relative; width:640px; height:480px; border:2px solid #00d8ff; border-radius:8px; overflow:hidden; background:#000; }
+    #camView { width:100%; height:100%; object-fit:contain; display:block; }
+    #status { margin-top:10px; font-size:14px; color:#aaa; }
 </style>
 </head>
 <body>
 <h1>Онлайн камеры ПК</h1>
 <select id="pcSelect"></select>
-
 <div id="camContainer">
     <img id="camView" src="" alt="Camera feed">
 </div>
@@ -65,7 +28,7 @@ const status = document.getElementById('status');
 
 async function updatePCList(){
     try {
-        const res = await fetch('/api/online-pcs'); // эндпоинт для списка ПК
+        const res = await fetch('/api/online-pcs');
         const pcs = await res.json();
         if(JSON.stringify(Array.from(select.options).map(o=>o.value)) !== JSON.stringify(pcs)){
             select.innerHTML = pcs.map(pc => `<option value="${pc}">${pc}</option>`).join('');
@@ -86,7 +49,7 @@ function connectWS(pcId){
     if(ws) ws.close();
     ws = new WebSocket(`ws://${location.host}?pcId=${encodeURIComponent(pcId)}`);
     status.textContent = `Подключение к ${pcId}...`;
-    
+
     ws.onopen = () => status.textContent = `Просмотр камеры ПК: ${pcId}`;
     ws.onmessage = e => img.src = "data:image/jpeg;base64," + e.data;
     ws.onclose = () => status.textContent = `Отключено от ${pcId}`;
@@ -96,7 +59,7 @@ function connectWS(pcId){
 select.addEventListener('change', e => connectWS(e.target.value));
 
 updatePCList();
-setInterval(updatePCList, 10000); // обновляем список каждые 10 сек
+setInterval(updatePCList, 10000);
 </script>
 </body>
 </html>
