--- a/public/cams.html
+++ b/public/cams.html
@@ -1,92 +1,62 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>📷 Панель камер</title>
+<title>Камеры</title>
 <style>
-body{margin:0;font-family:Arial;color:#eee;display:flex;height:100vh;overflow:hidden;background:#111}
-.sidebar{width:260px;background:#1a1a1a;border-right:2px solid #333;display:flex;flex-direction:column}
-.sidebar h2{text-align:center;padding:12px;margin:0;border-bottom:2px solid #333;background:#222}
-.cam-list{flex:1;overflow-y:auto}
-.cam-item{padding:10px;cursor:pointer;border-bottom:1px solid #333;display:flex;justify-content:space-between;align-items:center}
-.cam-item:hover{background:#333}
-.cam-item.online{color:#7CFC00}
-.cam-item.offline{color:#ff5555}
-.main{flex:1;display:flex;flex-direction:column}
-.viewer{flex:1;display:flex;justify-content:center;align-items:center;background:#000;position:relative}
-.viewer img{max-width:100%;max-height:100%;border-radius:8px}
-.viewer h3{position:absolute;top:10px;left:10px;background:rgba(0,0,0,0.6);padding:5px 10px;border-radius:5px;margin:0}
-.debug{height:120px;background:#181818;border-top:2px solid #333;overflow-y:auto;font-size:12px;padding:5px;color:#aaa}
-.debug div{margin-bottom:4px}
+body { font-family: sans-serif; background:#121212; color:#eee; }
+h1 { text-align:center; }
+#cams { display:flex; flex-wrap:wrap; gap:10px; justify-content:center; }
+.cam-container { border:1px solid #444; padding:5px; text-align:center; }
+.cam-container img { max-width:320px; border-radius:4px; }
+#debug { position:fixed; bottom:0; left:0; right:0; background:#222; color:#0f0; font-size:12px; padding:4px; max-height:150px; overflow:auto; }
+select { margin:10px; padding:5px; background:#222; color:#eee; border:1px solid #555; }
 </style>
 </head>
 <body>
-<div class="sidebar">
-<h2>📡 Камеры</h2>
-<div id="camList" class="cam-list"></div>
-</div>
-<div class="main">
-<div class="viewer">
-<h3 id="camTitle">Выберите камеру</h3>
-<img id="camImage" src="" alt="">
-</div>
-<div id="debugLog" class="debug"></div>
-</div>
+<h1>Камеры</h1>
+<select id="camSelect"></select>
+<div id="cams"></div>
+<div id="debug"></div>
 
 <script>
-const camListDiv=document.getElementById("camList"),
-      camTitle=document.getElementById("camTitle"),
-      camImage=document.getElementById("camImage"),
-      debugLog=document.getElementById("debugLog");
+const camsDiv = document.getElementById('cams');
+const debugDiv = document.getElementById('debug');
+const camSelect = document.getElementById('camSelect');
 
-let ws,currentCam=null,cams={};
+let cams = {}; // camId -> img элемент
 
-function logDebug(msg){
-    const line=document.createElement("div");
-    line.textContent=`[${new Date().toLocaleTimeString()}] ${msg}`;
-    debugLog.appendChild(line);
-    debugLog.scrollTop=debugLog.scrollHeight;
+function log(msg){ debugDiv.innerText += msg+"\n"; debugDiv.scrollTop=debugDiv.scrollHeight; }
+
+// Функция добавления камеры
+function addCam(camId){
+    if(cams[camId]) return;
+    const div=document.createElement('div');
+    div.className='cam-container';
+    const label=document.createElement('div'); label.innerText=camId;
+    const img=document.createElement('img'); img.id=camId;
+    div.appendChild(label); div.appendChild(img); camsDiv.appendChild(div);
+    cams[camId]=img;
+
+    const option=document.createElement('option'); option.value=camId; option.innerText=camId;
+    camSelect.appendChild(option);
 }
 
-function connectWS(){
-    ws=new WebSocket(`wss://${location.host}/?camId=all`);
-    ws.onopen=()=>logDebug("✅ WebSocket подключён");
-    ws.onerror=e=>logDebug("❌ WS ошибка: "+e.message);
-    ws.onclose=()=>{ logDebug("⚠️ WebSocket отключён, переподключение..."); setTimeout(connectWS,2000); };
-    ws.onmessage=e=>{
-        const {camId,screenshot}=JSON.parse(e.data);
-        const now=Date.now();
-        if(!cams[camId]) addCamera(camId);
-        cams[camId].lastSeen=now;
-        if(currentCam===camId){
-            camImage.src="data:image/jpeg;base64,"+screenshot;
-            camTitle.textContent=`📷 Камера: ${camId}`;
-        }
-    };
+// WebSocket
+function connectWS(camId){
+    const ws=new WebSocket(`${location.protocol==='https:'?'wss':'ws'}://${location.host}?camId=${camId}`);
+    ws.onopen=()=>log(`WS подключен: ${camId}`);
+    ws.onmessage=(event)=>{
+        const data=JSON.parse(event.data);
+        addCam(data.camId);
+        cams[data.camId].src="data:image/jpeg;base64,"+data.screenshot;
+    }
+    ws.onclose=()=>{ log(`WS закрыт: ${camId}`); setTimeout(()=>connectWS(camId),2000); }
 }
 
-function addCamera(camId){
-    const el=document.createElement("div");
-    el.className="cam-item offline";
-    el.textContent=camId;
-    el.onclick=()=>{ 
-        currentCam=camId; 
-        camTitle.textContent=`📷 Камера: ${camId}`; 
-        logDebug(`➡️ Выбрана камера ${camId}`);
-    };
-    camListDiv.appendChild(el);
-    cams[camId]={el,lastSeen:0};
-}
+connectWS("all");
 
-// Обновление статуса онлайн/оффлайн
-setInterval(()=>{
-    const now=Date.now();
-    Object.entries(cams).forEach(([id,cam])=>{
-        cam.el.className="cam-item "+(now-cam.lastSeen<10000?"online":"offline");
-    });
-},3000);
-
-connectWS();
+camSelect.addEventListener("change", ()=>{ const camId=camSelect.value; camsDiv.querySelectorAll(".cam-container").forEach(c=>c.style.display="none"); if(cams[camId]) cams[camId].parentElement.style.display="block"; });
 </script>
 </body>
 </html>
